// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Paragraph dangerouslySetInnerHTML renders 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  max-width: 30em;
  font-weight: undefined;
}

<div
  class="c0"
>
  <p
    class="c1"
  >
    This is a dangerouslySetInnerHTML!
  </p>
</div>
`;

exports[`Paragraph margin renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  margin: 12px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c2 {
  margin: 24px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c3 {
  margin: 48px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c5 {
  margin-bottom: 12px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c6 {
  margin-top: 12px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

<div
  class="c0"
>
  <p
    class="c1"
  />
  <p
    class="c2"
  />
  <p
    class="c3"
  />
  <p
    class="c4"
  />
  <p
    class="c5"
  />
  <p
    class="c6"
  />
</div>
`;

exports[`Paragraph maxLines renders 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  font-size: 1.125rem;
  line-height: 1.5rem;
  max-width: 30em;
  font-weight: undefined;
}

<div
  class="c0"
>
  <p
    class="c1"
  />
</div>
`;

exports[`Paragraph renders 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  max-width: 30em;
  font-weight: undefined;
}

<div
  class="c0"
>
  <p
    class="c1"
  />
</div>
`;

exports[`Paragraph size renders 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1rem;
  line-height: 1.25rem;
  max-width: 30em;
  font-weight: 400;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  max-width: 30em;
  font-weight: 400;
}

.c3 {
  font-size: 1.375rem;
  line-height: 1.75rem;
  max-width: 30em;
  font-weight: 400;
}

.c4 {
  font-size: 1.5rem;
  line-height: 1.875rem;
  max-width: 30em;
  font-weight: 400;
}

.c5 {
  font-size: 2.25rem;
  line-height: 2.5rem;
  max-width: 30em;
  font-weight: 400;
}

.c6 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  max-width: none;
  font-weight: undefined;
}

.c7 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  max-width: 30em;
  font-weight: undefined;
}

.c8 {
  font-size: 10px;
  line-height: normal;
  font-weight: undefined;
}

<div
  class="c0"
>
  <p
    class="c1"
  />
  <p
    class="c2"
  />
  <p
    class="c3"
  />
  <p
    class="c4"
  />
  <p
    class="c5"
  />
  <p
    class="c6"
  />
  <p
    class="c7"
  />
  <p
    class="c8"
  />
</div>
`;

exports[`Paragraph size renders outside grommet wrapper 1`] = `
.c0 {
  font-size: 14px;
  line-height: 20px;
  max-width: 336px;
}

<p
  class="c0"
/>
`;

exports[`Paragraph textAlign renders 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  max-width: 30em;
  text-align: left;
  font-weight: undefined;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  max-width: 30em;
  text-align: center;
  font-weight: undefined;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  max-width: 30em;
  text-align: right;
  font-weight: undefined;
}

.c4 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  max-width: 30em;
  text-align: justify;
  font-weight: undefined;
}

<div
  class="c0"
>
  <p
    class="c1"
  />
  <p
    class="c2"
  />
  <p
    class="c3"
  />
  <p
    class="c4"
  />
</div>
`;
